source/css/base.css
* {
  margin: 0;
  padding: 0;
}

html, body {
  font-size: 10px;
}

#app {
  position: relative;
  margin: 0 auto;
}

/*控制整个滚动条*/
::-webkit-scrollbar {
    background-color: transparent;
    width: 6px;
    height: 6px;
    background-clip: padding-box;
}

/*滚动条中滑块部分*/
::-webkit-scrollbar-thumb {
    background-color: #a4a4a4;
    border-radius: 5px;
    transition: background-color 0.3s ease;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #808080;
}

a {
  color: #666;
  text-decoration: none;
  background-color: transparent;
  transition: color 0.3s;
}

a:hover {
  color: black;
}

.flex-container {
  min-height: calc(100vh - 290px);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.header {
  padding: 50px 0;
}

.container {
  width: 50%;
  margin: 0 auto;
}

.index .post-list,
.friend-index .friend-list,
.archives .post-list,
.tag-index .tag-list,
.category-index .category-list,
.about-index .markdown-body {
  padding: 0 50px;
}

@media (max-width: 888px) {
  .container {
    width: 90%;
  }
  .index .post-list,
  .friend-index .friend-list,
  .archives .post-list,
  .tag-index .tag-list,
  .category-index .category-list,
  .about-index .markdown-body {
    padding: 0;
  }
  .post-catalog {
    display: none;
  }
}

.post-item {
  display: flex;
  font-size: 1.6rem;
  margin-bottom: 20px;
  align-items: center;
}

.post-item .time-m-d {
  flex-shrink: 0;
  margin-right: 30px;
  color: #666;
  font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
}

.post-item .title {
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  word-wrap: break-word;
  overflow: hidden;
  text-overflow: ellipsis;
}

.tag-details .time-m-d, .archives .time-m-d {
  margin: 0 30px;
}

.avatar {
  text-align: center;
  padding-bottom: 30px;
}

.avatar img {
  height: 100px;
  width: 100px;
  border-radius: 50%;
}

.avatar .nickname {
  font-size: 2rem;
  font-weight: 600;
  color: #666;
  padding-top: 10px;
}

.content {
  clear: both;
  padding: 0 20px;
}

.content-title {
  font-size: 1.6rem;
  color: #666;
  margin-bottom: 20px;
  font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
}

.navbar {
  display: flex;
  align-items: center;
  justify-content: center;
}

.navbar ul li {
  display: inline;
  margin: 0 15px;
  font-size: 1.6rem;
  font-weight: bold;
}

.navbar ul li a {
  padding-bottom: 2px;
}

.navbar ul li a:hover {
  border-bottom: 2px solid black;
}

.navbar ul li.active a {
  color: black;
  border-bottom: 2px solid black;
}

@media (max-width: 888px) {
  .navbar ul li {
    margin: 0 10px;
  }
}

.post-navigation {
  font-size: 1.5rem;
  padding: 20px 0;
  text-align: right;
  color: #666;
}

.post-navigation i {
  color: #000;
  font-weight: 600;
}

.post-navigation .page-num {
  padding: 0 10px;
}

.footer {
  padding-top: 30px;
  font-size: 1.2rem;
  color: #aaa;
}

.social {
  padding-bottom: 5px;
}

.social ul {
  text-align: center;
}

.social ul li {
  display: inline-block;
  padding: 0 5px;
}

.footer-more {
  padding-bottom: 5px;
  text-align: center;
}


.tag-list li {
  font-size: 1.6rem;
  display: inline-block;
  padding: 10px;
}

.tag-list li .tag-list-link {
  position: relative;
  padding: 0 2px;
  border-radius: 2px;
}

.tag-list li .tag-list-link:hover {
  color: #fff;
}

.tag-list li .tag-list-link::after {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: -2px;
  right: -2px;
  transition: transform 0.1s linear;
  background: #24292e;
  transform: scaleX(0);
  transform-origin: right;
  z-index: -1;
}

.tag-list li .tag-list-link:hover::after {
  transform: scaleX(1);
  transform-origin: left;
}

.tag-list-count, .category-list-count {
  padding: 0 5px;
  color: #aaa;
  font-size: 1.2rem;
  vertical-align: top;
}

.category-list .category-list-item {
  font-size: 1.6rem;
  padding: 5px 0;
}

.category-list .category-list-item .category-list-child {
  padding-left: 30px;
}

.friend-list-item {
  font-size: 1.6rem;
  padding: 10px;
}

.friend-list-item .nickname {
  padding-right: 10px;
}

.post-details .post-title {
  text-align: center;
  font-size: 2.2rem;
  font-weight: 600;
  color: #666;
  padding-bottom: 10px;
}

.post-details .post-attach {
  font-size: 1.4rem;
  text-align: center;
  padding-bottom: 30px;
  color: #666;
}

.post-content {
  padding-bottom: 1rem;
}

.prev-or-next {
  font-size: 1.5rem;
  display: flex;
  justify-content: space-between;
  padding: 1rem 0;
  margin: 3rem 0;
  border-top: 1px solid rgba(88,88,88,0.1);
}

.prev-or-next .post-attach {
  padding-bottom: 0;
  opacity: 0.9;
  font-size: 1.2rem;
}

.post-attach .post-pubtime, .post-attach .post-tags {
  padding: 0 10px;
}

@media (max-width: 768px) {
  .time-m-d {
    margin-right: 15px;
  }
  .tag-details .time-m-d, .archives .time-m-d {
    margin: 0 15px;
  }
}

.post-catalog {
  position: absolute;
  top: calc(290px + 88px + 30px);
  right: 0;
  min-width: 200px;
  width: 20%;
  font-size: 1.4rem;
  border-left: 1px solid rgba(88,88,88,0.1);
  padding-left: 10px;
}

.post-catalog .title {
  opacity: 0.8;
  font-size: 1.6rem;
  font-weight: bold;
}

.post-catalog .toc {
  padding-top: 10px;
}

.post-catalog .toc-child {
  padding-left: 10px;
}

.post-catalog li {
  list-style-type: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  line-height: 2;
}

.toc-link {
  padding: 3px 0 3px 5px;
  opacity: 0.8;
  border-left: 2px solid transparent;
  transition: border 0.3s, opacity 0.3s;
}

.toc-link.active {
  color: black;
  opacity: 1;
  border-left: 2px solid black;
}

.back-to-top {
  position: fixed;
  right: 2.2rem;
  bottom: 3.2rem;
  font-weight: bold;
}

.back-to-top.hidden {
  display: none;
}

